# mlops_demo

./: pyproject.toml
