[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Bob Kraft <bkraft@phdata.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
Sphinx = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
